fix(site-header): Aligning EC and EU css - FRONT-4569

--- a/src/implementations/vanilla/components/site-header/site-header-eu.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-eu.scss
@@ -170,8 +170,8 @@ $language-list: null !default;
   align-items: center;
   display: flex;
 
-  .ecl-button:not(.ecl-site-header__search-toggle) {
-    margin-inline-end: var(--s-2xs);
+  .ecl-button {
+    margin-inline-start: var(--s-2xs);
   }
 
   .ecl-site-header--has-menu &,
